[tool.poetry]
name = "fuselage"
version = "1.0.1"
description = "Orchestration and configuration management in Python"
authors = ["Isotoma Limited <support@isotoma.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yaybu/fuselage"
repository = "https://github.com/yaybu/fuselage"
keywords = ["devops","automation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.12.0"

[tool.poetry.dev-dependencies]
fakechroot = ">=0.2.1"
unittest2 = "^1.1.0"
isort = "^5.4.0"
black = "^19.10b0"
flake8 = "^3.0.0"
pytest = "^6.0.0"
coverage = "^5.0.3"
codecov = "^2.0.15"
pyupgrade = "^2.7.2"
apache-libcloud = "^3.1.0"

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = true
sections = "FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
known_first_party = "fuselage,tests"
forced_separate = "tests"
combine_as_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.black]
target-version = ["py37", "py38"]

[tool.poetry.scripts]
fuselage = "fuselage.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
